<resources>
    <string name="app_name">SinChat</string>
    <string name="yeni_hesap_olustur">YENİ HESAP OLUŞTUR</string>
    <string name="hesabim_var">HESABIM VAR</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="yeni_Hesap">Yeni Hesap Oluştur</string>
    <string name="hesap_olustur">HESAP OLUŞTUR</string>
    <string name="hesap_giris">Hesabınızla Giriş Yapınız</string>
    <string name="giris_yap">GİRİŞ YAP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mesajlar_ekrani">MESAJLAR EKRANI</string>
    <string name="logout">Çıkış</string>
</resources>
