<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <include layout ="@layout/actionbar_app"
        android:id="@+id/actionbarRegister"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/actionbarRegister"
        android:padding="10dp">
        <TextView
            android:id="@+id/txtinfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yeni_Hesap"

            android:textColor="@android:color/black"

            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />

        <EditText
            android:id="@+id/txtUserNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/kullanici_adi"
            />
        <EditText
            android:id="@+id/txtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/txtPaswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parola"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>
        <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hesap_olustur"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hesap_giris"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</RelativeLayout>