<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/actionbarlogin"
        android:padding="10dp">
        <TextView
            android:id="@+id/txtinfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesap_giris"

            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textSize="20sp"
            android:layout_marginLeft="4dp" />
            />
        <EditText
            android:id="@+id/txtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/txtPaswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/parola"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
          />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giris_yap"

            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yeni_Hesap"

            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>


    </LinearLayout>


</RelativeLayout>